create a block header

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	width: 165.7px;
     height: 47px;
     font-size: 40px;
-    color:#FF7F50;
+    color: #e5725e;
     padding: 6px 400.4px 5px 182.5px;
 }
 .menu-item {
@@ -18,17 +18,16 @@
 	padding: 5px 15.8px 18px 0;
 }
 .img {
-	display: inline-block;
-	position: relative;
-	width: 1154px;
+    background-image: url("img/rectangle-copy.png");
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size: cover;
+    width: 1154px;
     height: 488px;
-    justify-content: center;
-    padding: 0 0 0 143px;
+    margin: 0 auto;
 }
 .nuove {
-	display: inline-block;
-	position: absolute;
-	width: 663px;
+    width: 663px;
     height: 57px;
     font-size: 48px;
     padding: 198px 0 8px 65px;
