created a block with text

--- a/style.css
+++ b/style.css
@@ -30,5 +30,13 @@
     width: 663px;
     height: 57px;
     font-size: 48px;
-    padding: 198px 0 8px 65px;
+    color: white;
+    padding: 140px 0 8px 65px;
+}
+.people {
+    width: 691px;
+    height: 37px;
+    font-size: 32px;
+    color: white;
+    padding: 0 0 56px 65px;
 }
