--- a/style.css
+++ b/style.css
@@ -142,4 +142,14 @@
     color: white;
     padding: 0 0 16px 10px;
 }
+.lontana {
+    width: 231px;
+    height: 77px;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.38;
+    opacity: 0.8;
+    color: #979797;
+    padding: 80px 0 16px 142px;
+}
 
