--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .header {
-    width: 1440px;
-    height: 58px;
+    width: 100%;
+    height: 1023px;
     background-color: #ffffff;
 }
 .top {
@@ -10,12 +10,45 @@
     width: 165.7px;
     height: 47px;
     font-size: 40px;
-    color: #e5725e;
-    padding: 6px 400.4px 5px 182.5px;
+    color:#FF7F50;
+    padding: 6px 0 5px 182.5px;
 }
-.menu-item {
-    display: inline-block;
-    padding: 5px 15.8px 18px 0;
+.home {
+    width: 80.9px;
+    height: 22px;
+    font-size: 18px;
+    font-weight: 500;
+    color:#FF7F50;
+    opacity: 0.8;
+    padding: 18px 0 18px 400.8px;
+}
+.eventi {
+    width: 80.9px;
+    height: 21px;
+    font-size: 18px;
+    opacity: 0.8;
+    padding: 18px 0 18px 15.8px;
+}
+.ricette {
+    width: 80.9px;
+    height: 21px;
+    font-size: 18px;
+    opacity: 0.8;
+    padding: 18px 0 18px 15.8px;
+}
+.chef {
+    width: 165.7px;
+    height: 21px;
+    font-size: 18px;
+    opacity: 0.8;
+    padding: 18px 0 18px 15.8px;
+}
+.contatti {
+    width: 64.1px;
+    height: 21px;
+    font-size: 18px;
+    opacity: 0.8;
+    padding: 18px 0 18px 0;
 }
 .img {
     background-image: url("img/rectangle-copy.png");
@@ -31,6 +64,7 @@
     height: 57px;
     font-size: 48px;
     color: white;
+    opacity: 0.8;
     padding: 140px 0 8px 65px;
 }
 .people {
@@ -38,8 +72,42 @@
     height: 37px;
     font-size: 32px;
     color: white;
+    opacity: 0.8;
     padding: 0 0 56px 65px;
 }
 .buttons {
     padding: 0 0 70px 65px;
+}
+.food {
+    background-image: url("img/evgeniy.png");
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size: cover;
+    width: 854px;
+    height: 264px;
+    margin: 0 0 0 118px;
+}
+.nostri {
+    width: 205px;
+    height: 38px;
+    font-size: 32px;
+    color: white;
+    opacity: 0.8;
+    padding: 103px 0 6px 24px;
+}
+.tutti {
+    width: 261px;
+    height: 69px;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.38;
+    color: white;
+    opacity: 0.8;
+    padding: 0 0 48px 0;
+}
+.evento {
+    width: 197px;
+    height: 374px;
+    object-fit: contain;
+    padding: 103px 0 0 62px;
 }
