--- a/style.css
+++ b/style.css
@@ -177,3 +177,43 @@
     color: #979797;
     padding: 80px 0 16px 142px;
 }
+.buttons-1 {
+    padding: 0 0 0 142px;
+}
+.altri {
+    width: 177px;
+    height: 40px;
+    background-color: #ffffff;
+    border: solid 1px #979797;
+    font-size: 16px;
+    text-align: center;
+    color: #e5725e;
+}
+.work {
+    padding: 156px 0 80px 193px;
+}
+.pink {
+    width: 884px;
+    height: 488px;
+    background-color: #fef9f6;
+}
+.las {
+    width: 145px;
+    height: 22px;
+    font-size: 16px;
+    line-height: 1.38;
+    color:#FF7F50;
+    padding: 77px 0 8px 122px;
+}
+.alla {
+    width: 231px;
+    height: 114px;
+    font-size: 32px;
+    padding: 8px 0 16px 122px;
+}
+.brace {
+    width: 231px;
+    height: 114px;
+    font-size: 32px;
+    padding: 0 0 16px 122px;
+}
