--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@
     font-size: 16px;
     font-weight: 300;
     line-height: 0.75;
-    opacity: 0.8;
+    opacity: 0.5;
     color: black;
 }
 .buttons-3 {
@@ -297,5 +297,13 @@
     height: 177px;
     background-color: #4a4a4a;
     margin: 0 0 0 138px;
+}
+.nella {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 0.75;
+    opacity: 0.5;
+    color: white;
+    padding: 40px 0 46px 24px;
 }
 
