--- a/style.css
+++ b/style.css
@@ -293,13 +293,13 @@
     color: #e5725e;
 }
 .footer {
-    display: flex;
-}
-.wrapper-3 {
     width: 1170px;
     height: 177px;
     background-color: #4a4a4a;
     margin: 0 0 0 138px;
+}
+.wrapper-3 {
+    display: flex;
 }
 .nella {
     font-size: 16px;
@@ -309,20 +309,28 @@
     color: white;
     padding: 40px 0 0 24px;
 }
-.rights {
-    width: 1122px;
-    height: 22px;
-    font-size: 12px;
-    line-height: 1.83;
-    color: white;
-    opacity: 0.5;
-    padding: 46px 0 16px 24px;
-}
 .box {
     width: 317px;
     height: 40px;
     border: solid 1px #979797;
-    padding: 47px 0 0 0;
-
+    margin: 47px 0 52px 83px;
+}
+.inserisci {
+    font-size: 14px;
+    padding: 12px 0 12px 8px;
+    color: white;
+    opacity: 0.9;
+}
+.buttons-4 {
+    padding: 47px 0 52px 8px;
+}
+.iscriviti {
+    width: 79px;
+    height: 40px;
+    background-color: #ffffff;
+    border: solid 1px #979797;
+    font-size: 16px;
+    text-align: center;
+    color: #e5725e;
 }
 
